--- a/work.html
+++ b/work.html
@@ -10,7 +10,9 @@
         <title>Christine Waczynski | About</title>
 
         <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap"
+            rel="stylesheet">
 
         <!-- Normalize CSS -->
         <link rel="stylesheet" href="./assets/css/vendor/normalize.css">
@@ -47,39 +49,296 @@
 
         <!-- Work Section -->
         <div class="container">
-            <img src="./assets/images/IMG_0001.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0002.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0003.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0004.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0005.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0006.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0007.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0008.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0009.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0010.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0011.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0012.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0013.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0014.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0015.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0016.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0017.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0018.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0019.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0020.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0021.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0022.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0023.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0024.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0025.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0026.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0027.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0028.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0029.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0030.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0031.JPG" alt="Project Photo">
-            <img src="./assets/images/IMG_0032.JPG" alt="Project Photo">
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0001.JPG" alt="Hoffnung">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Hoffnung</h2>
+                        <p>Dimension: 30x120</p>
+                        <p>Werkzyklus "Florales"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0002.JPG" alt="Figura 1 und Figura 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Figura 1 und Figura 2</h2>
+                        <p>Dimension: 70x70, Acryl auf Lieinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0003.JPG" alt="Figura 5">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Figura 5</h2>
+                        <p>Dimension: 80x40, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0004.JPG" alt="Energie">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Energie</h2>
+                        <p>Dimension: 65x105, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0005.JPG" alt="Sehnsucht">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Sehnsucht</h2>
+                        <p>Dimension: 90x140, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0006.JPG" alt="Sehnsucht 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Sehnsucht 2</h2>
+                        <p>Dimension: 180x108, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0007.JPG" alt="Sehnsucht 3">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Sehnsucht 3</h2>
+                        <p>Dimension: 80x108, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0008.JPG" alt="Kraft 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Kraft 1</h2>
+                        <p>Dimension: 60x80, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0009.JPG" alt="Kraft 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Kraft 2</h2>
+                        <p>Dimension: 60x80, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0010.JPG" alt="Kraft 3">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Kraft 3</h2>
+                        <p>Dimension: 60x80, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0011.JPG" alt="Treue 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Treue 1</h2>
+                        <p>Dimension: 70x85, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0012.JPG" alt="Treue 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Treue 2</h2>
+                        <p>Dimension: 70x85, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0013.JPG" alt="Unschuld 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Unschuld 1</h2>
+                        <p>Dimension: 70x90, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0014.JPG" alt="Unschuld 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Unschuld 2</h2>
+                        <p>Dimension: 90x70, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0015.JPG" alt="Tanz">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Tanz</h2>
+                        <p>Dimension: 60x40, Papierarbeit</p>
+                        <p>Werkzyklus: Einheit</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0016.JPG" alt="Aktivität 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Aktivität 1</h2>
+                        <p>Dimension: 50x60, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0017.JPG" alt="Aktivität 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Aktivität 2</h2>
+                        <p>Dimension: 50x60, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0018.JPG" alt="Klarheit 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Klarheit 1</h2>
+                        <p>Dimension: 40x40, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus: Stadtlandschaften</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0019.JPG" alt="Klarheit 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Klarheit 2</h2>
+                        <p>Dimension: 40x40, Mischtechnik auf Leinwand</p>
+                        <p>Werkzyklus: Stadtlandschaften</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0020.JPG" alt="Klarheit 3">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Klarheit 3</h2>
+                        <p>Dimension: 80x120, Acryl auf Leinwand</p>
+                        <p>Werkzyklus: Stadtlandschaften</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0021.JPG" alt="Verbunden 1">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Verbunden 1</h2>
+                        <p>Dimension: 30x70, Acryl auf Leinwand</p>
+                        <p>Werkzyklus: Stadtlandschaften</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0022.JPG" alt="Verbunden 2">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Verbunden 2</h2>
+                        <p>Dimension: 30x70, Acryl auf Leinwand</p>
+                        <p>Werkzyklus: Stadtlandschaften</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0023.JPG" alt="Verdrent">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Verdrent</h2>
+                        <p>Dimension: 140x105, Acryl auf Leinwand</p>
+                        <p>Werkzyklus "Einheit"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img__box">
+                    <img src="./assets/images/IMG_0024.JPG" alt="Hawaii">
+                </div>
+                <div class="content">
+                    <div>
+                        <h2>Titel: Hawaii</h2>
+                        <p>Dimension; 120x80, Mischtechnik auf Leinwand</p>
+                        <p>Auftragsarbeiten</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <hr>
 
         <!-- Footer -->
@@ -88,14 +347,25 @@
 
                 <!-- Address -->
                 <div class="col span-1-of-3">
-                    <p class="footer__section">Christine Waczynski</p>
-                    <p class="footer__section">Hamburg, Germany</p>
+                    <p class="footer__section">
+                        Christine
+                        Waczynski
+                    </p>
+                    <p class="footer__section">
+                        Hamburg,
+                        Germany
+                    </p>
                 </div>
 
                 <!-- Contacts -->
                 <div class="col span-1-of-3">
-                    <p class="footer__section">Contact Me</p>
-                    <p class="contacts socials">hello@christinewaczynski.de</p>
+                    <p class="footer__section">
+                        Contact
+                        Me
+                    </p>
+                    <p class="contacts socials">
+                        hello@christinewaczynski.de
+                    </p>
                 </div>
 
                 <!-- Socials -->
