--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
         <title>Christine Waczynski | About</title>
 
         <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap"
+            rel="stylesheet">
 
         <!-- Normalize CSS -->
         <link rel="stylesheet" href="./assets/css/vendor/normalize.css">
@@ -35,11 +37,6 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="work.html">Work</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li class="socials">
-                            <a href="https://www.instagram.com">
-                                <img src="./assets/icons/instagram.png" alt="instagram icon" />
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -51,34 +48,39 @@
                 <p>New business, general curiosity, enquiries or support:</p>
             </div>
             <div class="row">
-                <p class="mail">hello@christinewaczynski.de</p>
+                <p class="mail">cwaczynski@online.de</p>
             </div>
         </section>
-        <hr>
 
         <!-- Footer -->
         <section class="footer">
             <div class="row">
 
                 <!-- Address -->
-                <div class="col span-1-of-3">
+                <div class="col span-1-of-4">
                     <p class="footer__section">Christine Waczynski</p>
-                    <p class="footer__section">Hamburg, Germany</p>
+                    <p class="footer__section">Sittermannstr. 64,<br> 47506, Neukirchen-Vluyn,<br>
+                        Germany</p>
                 </div>
 
                 <!-- Contacts -->
-                <div class="col span-1-of-3">
+                <div class="col span-1-of-4">
                     <p class="footer__section">Contact Me</p>
-                    <p class="contacts socials">hello@christinewaczynski.de</p>
+                    <p class="contacts socials">cwaczynski@online.de</p>
                 </div>
 
                 <!-- Socials -->
-                <div class="col span-1-of-3">
+                <div class="col span-1-of-4">
                     <p class="footer__section socials">
-                        <a href="https://www.instagram.com">
+                        <a href="https://www.instagram.com/sewing_me_">
                             <img src="./assets/icons/instagram.png" alt="instagram icon" />
                         </a>
                     </p>
+                </div>
+
+                <!-- Impressum -->
+                <div class="col span-1-of-4">
+                    <p class="footer__section"><a href="#">Impressum</a></p>
                 </div>
             </div>
         </section>
