--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="description" content="Art" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap"
+      rel="stylesheet">
 
     <!-- CSS animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -28,11 +30,6 @@
           <li><a href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li class="socials">
-            <a href="https://www.instagram.com">
-              <img src="./assets/icons/instagram.png" alt="instagram icon" />
-            </a>
-          </li>
         </ul>
       </div>
     </nav>
