Obfuscate the email address

--- a/about.html
+++ b/about.html
@@ -170,7 +170,8 @@
                 <!-- Contacts -->
                 <div class="col span-1-of-4">
                     <p class="footer__section">Contact Me</p>
-                    <p class="contacts socials">cwaczynski@online.de</p>
+                    <p id="m__link" class="contacts socials">cwaczynski [a.t] online [d.o.t] de
+                    </p>
                 </div>
 
                 <!-- Socials -->
@@ -189,6 +190,8 @@
             </div>
         </footer>
 
+        <!-- Work Scripts -->
+        <script type="text/javascript" src="./assets/js/work.js"></script>
     </body>
 
 </html>
