--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="photos" content="index, follow" />
         <meta name="description" content="Art" />
-        <title>Christine Waczynski | About</title>
+        <title>Christine Waczynski | Contact</title>
 
         <!-- Fonts -->
         <link
@@ -48,7 +48,7 @@
                 <p>New business, general curiosity, enquiries or support:</p>
             </div>
             <div class="row">
-                <p class="mail">cwaczynski@online.de</p>
+                <p id="m__link" class="contacts mail socials">cwaczynski [a.t] online [d.o.t] de</p>
             </div>
         </section>
 
@@ -57,20 +57,14 @@
             <div class="row">
 
                 <!-- Address -->
-                <div class="col span-1-of-4">
+                <div class="col span-1-of-3">
                     <p class="footer__section">Christine Waczynski</p>
                     <p class="footer__section">Sittermannstr. 64,<br> 47506, Neukirchen-Vluyn,<br>
                         Germany</p>
                 </div>
 
-                <!-- Contacts -->
-                <div class="col span-1-of-4">
-                    <p class="footer__section">Contact Me</p>
-                    <p class="contacts socials">cwaczynski@online.de</p>
-                </div>
-
                 <!-- Socials -->
-                <div class="col span-1-of-4">
+                <div class="col span-1-of-3">
                     <p class="footer__section socials">
                         <a href="https://www.instagram.com/sewing_me_">
                             <img src="./assets/icons/instagram.png" alt="instagram icon" />
@@ -79,12 +73,14 @@
                 </div>
 
                 <!-- Impressum -->
-                <div class="col span-1-of-4">
+                <div class="col span-1-of-3">
                     <p class="footer__section"><a href="#">Impressum</a></p>
                 </div>
             </div>
         </section>
 
+        <!-- Work Scripts -->
+        <script type="text/javascript" src="./assets/js/work.js"></script>
     </body>
 
 </html>
