--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="photos" content="index, follow" />
         <meta name="description" content="Art" />
-        <title>Christine Waczynski | About</title>
+        <title>Christine Waczynski | Work</title>
 
         <!-- Fonts -->
         <link
@@ -314,7 +314,7 @@
                         Contact
                         Me
                     </p>
-                    <p class="contacts socials">cwaczynskionline.de
+                    <p id="m__link" class="contacts socials">cwaczynski [a.t] online [d.o.t] de
                     </p>
                 </div>
 
@@ -334,6 +334,8 @@
             </div>
         </section>
 
+        <!-- Work Scripts -->
+        <script type="text/javascript" src="./assets/js/work.js"></script>
     </body>
 
 </html>
