--- a/work.html
+++ b/work.html
@@ -310,10 +310,7 @@
 
                 <!-- Contacts -->
                 <div class="col span-1-of-4">
-                    <p class="footer__section">
-                        Contact
-                        Me
-                    </p>
+                    <p class="footer__section contact__me">Contact Me</p>
                     <p id="m__link" class="contacts socials">cwaczynski [a.t] online [d.o.t] de
                     </p>
                 </div>
